--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
         </div>
         <div class="proposal-content">
           <div class="proposal-gif-wrap">
-            <img src="../FriendshipProposal-main/images/cat-01.gif" alt="Waiting…" class="proposal-gif" id="proposalGif" />
+            <img src="/images/cat-01.gif" alt="Waiting…" class="proposal-gif" id="proposalGif" />
           </div>
           <div class="proposal-text glass-panel">
             <p>
@@ -524,3 +524,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
