--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
         </div>
         <div class="proposal-content">
           <div class="proposal-gif-wrap">
-            <img src="/images/cat-01.gif" alt="Waiting…" class="proposal-gif" id="proposalGif" />
+            <img src="images/cat-01.gif" alt="Waiting…" class="proposal-gif" id="proposalGif" />
           </div>
           <div class="proposal-text glass-panel">
             <p>
@@ -503,7 +503,7 @@
         <i class="fas fa-star celebration-star"></i>
         <h2 class="celebration-title">We're Friends Now! 🎊</h2>
         <div class="celebration-gif-wrap">
-          <img src="../FriendshipProposal-main/images/cat-yes.gif" alt="Yay!" class="celebration-gif" />
+          <img src="images/cat-yes.gif" alt="Yay!" class="celebration-gif" />
         </div>
         <div class="celebration-message glass-panel">
           <p>
@@ -524,4 +524,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
